--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,25 @@
 {
     "files.associations": {
+        "vector": "cpp",
         "iostream": "cpp",
+        "locale": "cpp",
+        "complex": "cpp",
+        "__split_buffer": "cpp",
         "string": "cpp",
-        "stdexcept": "cpp",
-        "istream": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "__bit_reference": "cpp",
-        "__config": "cpp",
-        "__debug": "cpp",
-        "__errc": "cpp",
         "__hash_table": "cpp",
         "__locale": "cpp",
-        "__mutex_base": "cpp",
         "__node_handle": "cpp",
-        "__split_buffer": "cpp",
-        "__threading_support": "cpp",
         "__verbose_abort": "cpp",
         "array": "cpp",
-        "atomic": "cpp",
         "bitset": "cpp",
         "cctype": "cpp",
         "charconv": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "complex": "cpp",
         "cstdarg": "cpp",
-        "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
@@ -32,30 +27,30 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "exception": "cpp",
+        "deque": "cpp",
+        "execution": "cpp",
+        "memory": "cpp",
+        "forward_list": "cpp",
         "fstream": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
+        "istream": "cpp",
         "limits": "cpp",
-        "locale": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "optional": "cpp",
-        "ostream": "cpp",
+        "print": "cpp",
+        "queue": "cpp",
         "ratio": "cpp",
         "sstream": "cpp",
+        "stack": "cpp",
+        "stdexcept": "cpp",
         "streambuf": "cpp",
         "string_view": "cpp",
-        "system_error": "cpp",
-        "thread": "cpp",
-        "tuple": "cpp",
         "typeinfo": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
         "variant": "cpp",
-        "vector": "cpp",
         "algorithm": "cpp"
     }
 }
